--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Potfolio</title>
+<title>Portfolio</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
