--- a/index.html
+++ b/index.html
@@ -2,10 +2,33 @@
 <head>
 <title>Portfolio</title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<style>
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+</style>
 </head>
 <body>
 
-<h1>Testing, 1, 2, 3...</h1>
+<div id="wrapper">
+
+<div id="header">
+
+	<h1>[ Portfolio ]</h1>
+
+</div>
+
+<div id="content">
+
+	<h1>Testing, 1, 2, 3...</h1>
+
+</div>
+
+<div id="footer">
+
+	<p>12/5/2016</p>
+	
+</div>
+
+</div>
 
 </body>
 </html>
