--- a/index.html
+++ b/index.html
@@ -15,16 +15,22 @@
 
 <div class="wrapper mnu" script="$(".wrapper".height($(document)).height());">
 
-<img id="mnu_toggle" src="assets/mnuBar.png" onmouseover="this.src='assets/mnuBar_Hover.png'" onmouseout="this.src='assets/mnuBar.png'"/>
+<div id="fixedtop">
+	<img id="mnu_toggle" src="assets/mnuBar.png" onmouseover="this.src='assets/mnuBar_Hover.png'" onmouseout="this.src='assets/mnuBar.png'"/>
 
-<div id="header">
-
-	<h1 class="dark">[ Portfolio ]</h1>
+	<div id="header">
+		
+		<!-- <h1 class="dark">Armando Campos</h1> -->
+		<h1 class="dark">Armando Campos [Portfolio]</h1>
+		
+	</div>
 
 </div>
 
 <div id="content">
-
+	
+	<div class="divider">...<br>...</div>
+	
 	<h1>Testing, 1, 2, 3...</h1>
 	<p class="para">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cam sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 	<br>
@@ -38,6 +44,8 @@
 	<br>
 	Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</p>
 
+	<p>ddddddddddddddjjjjjjjjj jjjjjjjjjjjjjjjjjllll llllllllllllllll lllllllll llllllllls ssssssssssssssssssss sssssssssssssssssss sssssssssssssssssssssss ssssss sssssssssssssss sssssssssssssssssseeeeeeeeeeeeeeeeeeee eeeeeeeeeeeeeee eeeeeeeeeeeee eeeeeeeqq qqqqqqqqqqqqqqqq qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq qqqqq qqqqqq qqqqq qqqqqqqqq qq qqq qqqq</p>
+	
 <!--- Gallery--->
 	<div id="mygallery" class="stepcarousel">
 		<div class="belt beltPost2" id="belt">
