--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 @import url('index.css');
 <!-- Fonts -->
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-<style>@import url('https://fonts.googleapis.com/css?family=Merriweather');</style>
-<style>@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');</style>
-<style>@import url('https://fonts.googleapis.com/css?family=Enriqueta');</style>
+@import url('https://fonts.googleapis.com/css?family=Merriweather');
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
+@import url('https://fonts.googleapis.com/css?family=Enriqueta');
+@import url('https://fonts.googleapis.com/css?family=Slabo+27px');
+@import url('https://fonts.googleapis.com/css?family=Bitter|Scope+One');
 </style>
 </head>
 <body>
@@ -21,7 +23,7 @@
 	<div id="header">
 		
 		<!-- <h1 class="dark">Armando Campos</h1> -->
-		<h1 class="dark">Armando Campos [Portfolio]</h1>
+		<h1 class="colored">Armando Campos [Portfolio]</h1>
 		
 	</div>
 
@@ -65,7 +67,7 @@
 
 <div id="footer">
 
-	<p>12/5/2016</p>
+	<p>12/9/2016</p>
 	
 </div>
 
@@ -73,7 +75,10 @@
 
 	<ul style="list-style: none;">
 		<li onmouseover="include_space('1')" onmouseout="exclude_space('1')" ><a href="index.html"><span class="space" id="space1">-</span>Home</a></li>
-		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="index.html"><span class="space" id="space2">-</span>Option 2</a></li>
+		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="index.html"><span class="space" id="space2">-</span>Education</a></li>
+		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="index.html"><span class="space" id="space3">-</span>Work<br>Experience</a></li>
+		<li onmouseover="include_space('4')" onmouseout="exclude_space('4')" ><a href="index.html"><span class="space" id="space4">-</span>Extracirricular<br>Activities</a></li>
+		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="index.html"><span class="space" id="space5">-</span>Recognition<br>Awards</a></li>
 	</ul>
 
 </div>
