--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div id="header">
 		
 		<!-- <h1 class="dark">Armando Campos</h1> -->
-		<h1 class="colored">Armando Campos [Portfolio]</h1>
+		<h1 class="bgwhite">Armando Campos [Portfolio]</h1>
 		
 	</div>
 
@@ -41,8 +41,8 @@
 	Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. <br>
 	Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</p>
 
-	<p>Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
-	<p>
+	<p class="note">Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+	<p class="para">
 	In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
 	</p>
 	
@@ -67,7 +67,7 @@
 
 <div id="footer">
 
-	<p>12/9/2016</p>
+	<p>12/13/2016</p>
 	
 </div>
 
@@ -75,10 +75,11 @@
 
 	<ul style="list-style: none;">
 		<li onmouseover="include_space('1')" onmouseout="exclude_space('1')" ><a href="index.html"><span class="space" id="space1">-</span>Home</a></li>
-		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="index.html"><span class="space" id="space2">-</span>Education</a></li>
-		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="index.html"><span class="space" id="space3">-</span>Work<br>Experience</a></li>
-		<li onmouseover="include_space('4')" onmouseout="exclude_space('4')" ><a href="index.html"><span class="space" id="space4">-</span>Extracirricular<br>Activities</a></li>
+		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="index.html"><span class="space" id="space2">-</span>About</a></li>
+		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="index.html"><span class="space" id="space3">-</span>Education</a></li>
+		<li onmouseover="include_space('4')" onmouseout="exclude_space('4')" ><a href="index.html"><span class="space" id="space4">-</span><div class="narrow">Extracirricular</div></a></li>
 		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="index.html"><span class="space" id="space5">-</span>Recognition<br>Awards</a></li>
+		<li onmouseover="include_space('6')" onmouseout="exclude_space('6')" ><a href="index.html"><span class="space" id="space6">-</span>Contact</a></li>
 	</ul>
 
 </div>
