--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
 		<li onmouseover="include_space('1')" onmouseout="exclude_space('1')" ><a href="index.html"><span class="space" id="space1">-</span>Home</a></li>
 		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="index.html"><span class="space" id="space2">-</span>About</a></li>
 		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="index.html"><span class="space" id="space3">-</span>Education</a></li>
-		<li onmouseover="include_space('4')" onmouseout="exclude_space('4')" ><a href="index.html"><span class="space" id="space4">-</span><div class="narrow">Extracirricular</div></a></li>
-		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="index.html"><span class="space" id="space5">-</span>Recognition<br>Awards</a></li>
-		<li onmouseover="include_space('6')" onmouseout="exclude_space('6')" ><a href="index.html"><span class="space" id="space6">-</span>Contact</a></li>
+		<li onmouseover="include_space('4')" onmouseout="exclude_space('4')" ><a href="index.html"><span class="space" id="space4">-</span>Skills</a></li>
+		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="index.html"><span class="space" id="space5">-</span>Projects</a></li>
+		<li onmouseover="include_space('6')" onmouseout="exclude_space('6')" ><a href="index.html"><span class="space" id="space6">-</span>Hobbies</a></li>
+		<li onmouseover="include_space('7')" onmouseout="exclude_space('7')" ><a href="index.html"><span class="space" id="space7">-</span>Contact</a></li>
 	</ul>
 
 </div>
