--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		
 		<!-- <h1 class="dark">Armando Campos</h1> -->
 		<!-- <h1 class="bgwhite">Armando Campos [Portfolio]</h1> -->
-		<img id="banner" src="assets/banner.png" />
+		<a href="index.html"><img id="banner" src="assets/banner.png" /></a>
 		
 	</div>
 
