--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
 	<img id="mnu_toggle" src="assets/mnuBar.png" onmouseover="this.src='assets/mnuBar_Hover.png'" onmouseout="this.src='assets/mnuBar.png'"/>
 
 	<div id="header">
-		
-		<!-- <h1 class="dark">Armando Campos</h1> -->
-		<!-- <h1 class="bgwhite">Armando Campos [Portfolio]</h1> -->
 		<a href="index.html"><img id="banner" src="assets/banner.png" /></a>
-		
 	</div>
 
 </div>
@@ -35,6 +31,7 @@
 	<div class="divider">...<br>...</div>
 	
 	<h1>Portfolio</h1>
+	<p class="para">This is a personal portfolio of me, Armando Campos.</p>
 
 	<table>
 		<tr>
