--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 	<div id="mygallery" class="stepcarousel">
 		<div class="belt beltPost2" id="belt">
         	<div class="panels">
-                <img class="panelimg" src="assets/mnuBar.png" />
-                <img class="panelimg" src="assets/mnuBar_Hover.png" />
-                <img class="panelimg" src="assets/mnuBar.png" />
-                <img class="panelimg" src="assets/mnuBar_Hover.png" />
+                <img class="panelimg" src="assets/tst1.png" />
+                <img class="panelimg" src="assets/tst2.png" />
+                <img class="panelimg" src="assets/tst3.png" />
+                <img class="panelimg" src="assets/tst4.png" />
             </div>
 		</div>
 		<div class="beltbtns">
