--- a/contact.html
+++ b/contact.html
@@ -30,23 +30,11 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<h1>Portfolio</h1>
-	<p class="para">This is a personal portfolio for me, Armando Campos.</p>
-
-	<table>
-		<tr>
-			<td>
-				<p class="para"></p>
-				
-				</p>
-			</td>
-			<td></td>
-		</tr>
-	</table>
-
+	<h1>Contact</h1>
+	<p class="para">If you wish to contact me you can reach me through email to the following address:<br><br><strong>armandocampos540@rusdlearns.net</strong></p>
 	
 	
-<!-- Gallery-->
+<!-- Gallery
 	<div id="mygallery" class="stepcarousel">
 		<div class="belt beltPost2" id="belt">
         	<div class="panels">
@@ -61,13 +49,11 @@
 		<p class="beltbtn beltbtndown" onclick="belt_movedown(getByID('belt'), 4)" ></p>
 		</div>
 	</div>
-<!-- End of Gallery-->
+End of Gallery-->
 
 </div>
 
 <div id="footer">
-
-	<p>12/13/2016</p>
 	
 </div>
 
