--- a/education.html
+++ b/education.html
@@ -30,45 +30,19 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<h1>Portfolio</h1>
-	<p class="para">This is a personal portfolio for me, Armando Campos.</p>
-
-	<table>
-		<tr>
-			<td>
-				<p class="para"></p>
-				
-				</p>
-			</td>
-			<td></td>
-		</tr>
-	</table>
-
+	<h1>Education</h1>
+	<div class="para">I am curently enrolled at Riverside Poly High School and in the middle of my Senior Year. I have attended from 2013 - 2017.</div>
+	<img class="photo" src="http://www.rusdlink.org/cms/lib3/CA01001728/Centricity/Template/8/logos/poly.png" />
+	<div class="note">Poly High School<br>5450 Victoria Ave, Riverside, CA 92506</div>
+	<div class="separation">...</div>
+	<div class="para">Prior to High School, I attented Riverside Central Middle School from 2011 - 2013.</div>
+	<img class=" photo" src="assets/central.png">
+	<div class="note">Central Middle School<br>4795 Magnolia Ave, Riverside, CA 92506</div>
 	
-	
-<!-- Gallery-->
-	<div id="mygallery" class="stepcarousel">
-		<div class="belt beltPost2" id="belt">
-        	<div class="panels">
-                <img class="panelimg" src="assets/tst1.png" />
-                <img class="panelimg" src="assets/tst2.png" />
-                <img class="panelimg" src="assets/tst3.png" />
-                <img class="panelimg" src="assets/tst4.png" />
-            </div>
-		</div>
-		<div class="beltbtns">
-		<p class="beltbtn beltbtnup" onclick="belt_moveup(getByID('belt'), 4)" ></p>
-		<p class="beltbtn beltbtndown" onclick="belt_movedown(getByID('belt'), 4)" ></p>
-		</div>
-	</div>
-<!-- End of Gallery-->
-
 </div>
 
 <div id="footer">
-
-	<p>12/13/2016</p>
-	
+	<div class="note">Armando Campos, 2016 - 2017</div>
 </div>
 
 <div class="mnu_side">
