--- a/about.html
+++ b/about.html
@@ -3,14 +3,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
 <title>About</title>
 <style>
-@import url('index.css');
-<!-- Fonts -->
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url(index.css);
 @import url('https://fonts.googleapis.com/css?family=Merriweather');
 @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
 @import url('https://fonts.googleapis.com/css?family=Enriqueta');
-@import url('https://fonts.googleapis.com/css?family=Slabo+27px');
-@import url('https://fonts.googleapis.com/css?family=Bitter|Scope+One');
 </style>
 </head>
 <body>
@@ -30,8 +26,20 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<h1>Portfolio</h1>
-	<p class="para">This is a personal portfolio for me, Armando Campos.</p>
+	<div class="centext">Portfolio</div>
+	<p class="para">This is a personal portfolio for me, <a href="about.html">Armando Campos</a>.</p>
+	<div class="separation"></div>
+	<div class="centext dark">
+	<div class="divider2 cD">...</div>
+	<div>Normal</div>
+	<a href="#">Link</a>
+	<div class="para">Para</div>
+	<div class="description">Description</div>
+	<div class="additional cG">Additional</div>
+	<div class="note cW">Note</div>
+	<div class="divider2 cD">...</div>
+	<div class="separation2"></div>
+	</div>
 
 	<table>
 		<tr>
@@ -73,7 +81,7 @@
 
 <div class="mnu_side">
 
-	<ul style="list-style: none;">
+	<ul class="mnu_side">
 		<li onmouseover="include_space('1')" onmouseout="exclude_space('1')" ><a href="index.html"><span class="space" id="space1">-</span>Home</a></li>
 		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="about.html"><span class="space" id="space2">-</span>About</a></li>
 		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="education.html"><span class="space" id="space3">-</span>Education</a></li>
