--- a/about.html
+++ b/about.html
@@ -26,35 +26,17 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<div class="centext">Portfolio</div>
-	<p class="para">This is a personal portfolio for me, <a href="about.html">Armando Campos</a>.</p>
+	<div class="centext">| - - - - - - About - - - - - - |</div>
+	<div class="additional centext">[ Last Updated: 1/10/17 ]</
 	<div class="separation"></div>
 	<div class="centext dark">
 	<div class="divider2 cD">...</div>
-	<div>Normal</div>
-	<a href="#">Link</a>
-	<div class="para">Para</div>
-	<div class="description">Description</div>
-	<div class="additional cG">Additional</div>
-	<div class="note cW">Note</div>
+	<div class="description">I am Armando Campos, the creator and subject of this website.</div>
 	<div class="divider2 cD">...</div>
 	<div class="separation2"></div>
 	</div>
-
-	<table>
-		<tr>
-			<td>
-				<p class="para"></p>
-				
-				</p>
-			</td>
-			<td></td>
-		</tr>
-	</table>
-
 	
-	
-<!-- Gallery-->
+<!-- Gallery
 	<div id="mygallery" class="stepcarousel">
 		<div class="belt beltPost2" id="belt">
         	<div class="panels">
@@ -69,14 +51,12 @@
 		<p class="beltbtn beltbtndown" onclick="belt_movedown(getByID('belt'), 4)" ></p>
 		</div>
 	</div>
-<!-- End of Gallery-->
+ End of Gallery-->
 
 </div>
 
 <div id="footer">
-
-	<p>12/13/2016</p>
-	
+	©2017 Armando Campos
 </div>
 
 <div class="mnu_side">
