--- a/capstone.html
+++ b/capstone.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-<title>Education</title>
+<title>Capstone</title>
 <style>
 @import url(index.css);
 @import url('https://fonts.googleapis.com/css?family=Merriweather');
@@ -26,20 +26,27 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<div class="centext">| - - - - - - Education - - - - - - |</div>
+	<div class="centext">| - - - - - - Capstone - - - - - - |</div>
 	<div class="additional centext">[ Last Updated: 1/10/17 ]</
 	<div class="separation"></div>
-
-	<div class="centext">
-	<div class="para">I am curently enrolled at Riverside Poly High School and in the middle of my Senior Year. I have attended from 2013 - 2017.</div>
-	<img class="ghover" src="http://www.rusdlink.org/cms/lib3/CA01001728/Centricity/Template/8/logos/poly.png" />
-	<div class="description">Poly High School<br>5450 Victoria Ave, Riverside, CA 92506</div>
-	<div class="separation">...</div>
-	<div class="para">Prior to High School, I attented Riverside Central Middle School from 2011 - 2013.</div>
-	<img class="ghover" src="assets/central.png">
-	<div class="description">Central Middle School<br>4795 Magnolia Ave, Riverside, CA 92506</div>
-	</div>
 	
+<!-- Gallery
+	<div id="mygallery" class="stepcarousel">
+		<div class="belt beltPost2" id="belt">
+        	<div class="panels">
+                <img class="panelimg" src="assets/tst1.png" />
+                <img class="panelimg" src="assets/tst2.png" />
+                <img class="panelimg" src="assets/tst3.png" />
+                <img class="panelimg" src="assets/tst4.png" />
+            </div>
+		</div>
+		<div class="beltbtns">
+		<p class="beltbtn beltbtnup" onclick="belt_moveup(getByID('belt'), 4)" ></p>
+		<p class="beltbtn beltbtndown" onclick="belt_movedown(getByID('belt'), 4)" ></p>
+		</div>
+	</div>
+End of Gallery-->
+
 </div>
 
 <div id="footer">
