--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
 <title>Contact</title>
 <style>
-@import url('index.css');
-<!-- Fonts -->
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url(index.css);
 @import url('https://fonts.googleapis.com/css?family=Merriweather');
 @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
 @import url('https://fonts.googleapis.com/css?family=Enriqueta');
-@import url('https://fonts.googleapis.com/css?family=Slabo+27px');
-@import url('https://fonts.googleapis.com/css?family=Bitter|Scope+One');
 </style>
 </head>
 <body>
@@ -30,8 +26,15 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<h1>Contact</h1>
-	<p class="para">If you wish to contact me you can reach me through email to the following address:<br><br><strong>armandocampos540@rusdlearns.net</strong></p>
+	<div class="centext">| - - - - - - Contact - - - - - - |</div>
+	<div class="separation"></div>
+	<div class="centext dark">
+	<div class="divider2 cD">...</div>
+	<div class="additional cW">[ email ]</div>
+	<div class="description">armandocampos540@rusdlearns.net</div>
+	<div class="divider2 cD">...</div>
+	<div class="separation2"></div>
+	</div>
 	
 	
 <!-- Gallery
@@ -54,12 +57,12 @@ End of Gallery-->
 </div>
 
 <div id="footer">
-	
+	©2017 Armando Campos
 </div>
 
 <div class="mnu_side">
 
-	<ul style="list-style: none;">
+	<ul class="mnu_side">
 		<li onmouseover="include_space('1')" onmouseout="exclude_space('1')" ><a href="index.html"><span class="space" id="space1">-</span>Home</a></li>
 		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="about.html"><span class="space" id="space2">-</span>About</a></li>
 		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="education.html"><span class="space" id="space3">-</span>Education</a></li>
