--- a/hobbies.html
+++ b/hobbies.html
@@ -3,14 +3,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
 <title>Hobbies</title>
 <style>
-@import url('index.css');
-<!-- Fonts -->
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url(index.css);
 @import url('https://fonts.googleapis.com/css?family=Merriweather');
 @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
 @import url('https://fonts.googleapis.com/css?family=Enriqueta');
-@import url('https://fonts.googleapis.com/css?family=Slabo+27px');
-@import url('https://fonts.googleapis.com/css?family=Bitter|Scope+One');
 </style>
 </head>
 <body>
@@ -30,23 +26,11 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<h1>Portfolio</h1>
-	<p class="para">This is a personal portfolio for me, Armando Campos.</p>
+	<div class="centext">| - - - - - - Hobbies - - - - - - |</div>
+	<div class="additional centext">[ Last Updated: 1/10/17 ]</
+	<div class="separation"></div>
 
-	<table>
-		<tr>
-			<td>
-				<p class="para"></p>
-				
-				</p>
-			</td>
-			<td></td>
-		</tr>
-	</table>
-
-	
-	
-<!-- Gallery-->
+<!-- Gallery
 	<div id="mygallery" class="stepcarousel">
 		<div class="belt beltPost2" id="belt">
         	<div class="panels">
@@ -61,19 +45,17 @@
 		<p class="beltbtn beltbtndown" onclick="belt_movedown(getByID('belt'), 4)" ></p>
 		</div>
 	</div>
-<!-- End of Gallery-->
+End of Gallery-->
 
 </div>
 
 <div id="footer">
-
-	<p>12/13/2016</p>
-	
+	©2017 Armando Campos
 </div>
 
 <div class="mnu_side">
 
-	<ul style="list-style: none;">
+	<ul class="mnu_side">
 		<li onmouseover="include_space('1')" onmouseout="exclude_space('1')" ><a href="index.html"><span class="space" id="space1">-</span>Home</a></li>
 		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="about.html"><span class="space" id="space2">-</span>About</a></li>
 		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="education.html"><span class="space" id="space3">-</span>Education</a></li>
