--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<div class="centext">| - - - - - - Contact - - - - - - |</div>
+	<div class="centext">| - - - - - Contact - - - - - |</div>
 	<div class="separation"></div>
 	<div class="centext dark">
 	<div class="divider2 cD">...</div>
