--- a/skills.html
+++ b/skills.html
@@ -26,26 +26,14 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<div class="centext">| - - - - - - Skills - - - - - - |</div>
-	<div class="additional centext">[ Last Updated: 1/10/17 ]</
-	<div class="separation"></div>	
-	
-<!-- Gallery
-	<div id="mygallery" class="stepcarousel">
-		<div class="belt beltPost2" id="belt">
-        	<div class="panels">
-                <img class="panelimg" src="assets/tst1.png" />
-                <img class="panelimg" src="assets/tst2.png" />
-                <img class="panelimg" src="assets/tst3.png" />
-                <img class="panelimg" src="assets/tst4.png" />
-            </div>
-		</div>
-		<div class="beltbtns">
-		<p class="beltbtn beltbtnup" onclick="belt_moveup(getByID('belt'), 4)" ></p>
-		<p class="beltbtn beltbtndown" onclick="belt_movedown(getByID('belt'), 4)" ></p>
-		</div>
-	</div>
-End of Gallery-->
+	<div class="centext">| - - - - - Skills - - - - - |</div>
+	<div class="additional centext">[ Last Updated: 1/10/17 ]</div>
+	<div class="separation"></div>
+	<div class="centext">Programming Languages</div>
+	<div class="para centext">My programming language of choice is Java, it is what I've had the most experience with. I'm comfortable with HTML, CSS, and Javascript for web development purposes. I have also dabbled with Python and Lua, having a basic understanding of syntax.</div>
+	<div class="separation2"></div>
+	<div class="centext">Software</div>
+	<div class="para centext">I use a variety of software in order when working on personal projects. For Image Editing I stick to Adobe Photoshop and have years of experience with it. For Video Editing my preference is to use Sony Vegas and Adobe After Effects. When it comes to Audio Editing, I rely on the use of Audacity. When programming I often will use an IDE or just a basic text editor like NotePad++ or SublimeText, for Java my favorite is IntelliJ by JetBrains. For Android Development I made use of Android Studio.</div>
 
 </div>
 
