--- a/about.html
+++ b/about.html
@@ -26,32 +26,15 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<div class="centext">| - - - - - - About - - - - - - |</div>
+	<div class="centext">| - - - - - About - - - - - |</div>
 	<div class="additional centext">[ Last Updated: 1/10/17 ]</
 	<div class="separation"></div>
 	<div class="centext dark">
 	<div class="divider2 cD">...</div>
-	<div class="description">I am Armando Campos, the creator and subject of this website.</div>
+	<div class="description">I am Armando Campos, the creator and subject of this website. I'm 17 and a senior at Riverside Poly High School.</div>
 	<div class="divider2 cD">...</div>
 	<div class="separation2"></div>
 	</div>
-	
-<!-- Gallery
-	<div id="mygallery" class="stepcarousel">
-		<div class="belt beltPost2" id="belt">
-        	<div class="panels">
-                <img class="panelimg" src="assets/tst1.png" />
-                <img class="panelimg" src="assets/tst2.png" />
-                <img class="panelimg" src="assets/tst3.png" />
-                <img class="panelimg" src="assets/tst4.png" />
-            </div>
-		</div>
-		<div class="beltbtns">
-		<p class="beltbtn beltbtnup" onclick="belt_moveup(getByID('belt'), 4)" ></p>
-		<p class="beltbtn beltbtndown" onclick="belt_movedown(getByID('belt'), 4)" ></p>
-		</div>
-	</div>
- End of Gallery-->
 
 </div>
 
