--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<div class="centext">| - - - - - - Portfolio - - - - - - |</div>
+	<div class="centext">| - - - - - Portfolio - - - - - |</div>
 	<div class="additional centext">[ Last Updated: 1/10/17 ]</
 	<div class="separation"></div>
 	<div class="centext dark">
