--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 	<div class="divider">...<br>...</div>
 	
 	<div class="centext">| - - - - - Projects - - - - - |</div>
-	<div class="additional centext">[ Last Updated: 1/10/17 ]</
+	<div class="additional centext">[ Last Updated: 1/10/17 ]</div>
 	<div class="separation"></div>
 	
 <!-- Gallery
