--- a/about.html
+++ b/about.html
@@ -31,10 +31,12 @@
 	<div class="separation"></div>
 	<div class="centext dark">
 	<div class="divider2 cD">...</div>
-	<div class="description">I am Armando Campos, the creator and subject of this website. I'm 17 and a senior at Riverside Poly High School.</div>
+	<div class="description" style="font-size: 16px;">I am Armando Campos, the creator and subject of this website. I'm 17 and a senior at Riverside Poly High School. Within this website is my portfolio, containing a brief history of my experiences within the last few years. This is simply a quick overview of my life as my time left in high school comes to an end.</div>
 	<div class="divider2 cD">...</div>
 	<div class="separation2"></div>
 	</div>
+	<div class="divider2">...</div>
+	<div class="para">???</div>
 
 </div>
 
@@ -49,10 +51,9 @@
 		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="about.html"><span class="space" id="space2">-</span>About</a></li>
 		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="education.html"><span class="space" id="space3">-</span>Education</a></li>
 		<li onmouseover="include_space('4')" onmouseout="exclude_space('4')" ><a href="skills.html"><span class="space" id="space4">-</span>Skills</a></li>
-		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="projects.html"><span class="space" id="space5">-</span>Projects</a></li>
-		<li onmouseover="include_space('6')" onmouseout="exclude_space('6')" ><a href="hobbies.html"><span class="space" id="space6">-</span>Hobbies</a></li>
-		<li onmouseover="include_space('7')" onmouseout="exclude_space('7')" ><a href="capstone.html"><span class="space" id="space7">-</span>Capstone</a></li>
-		<li onmouseover="include_space('8')" onmouseout="exclude_space('8')" ><a href="contact.html"><span class="space" id="space8">-</span>Contact</a></li>
+		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="hobbies.html"><span class="space" id="space6">-</span>Hobbies</a></li>
+		<li onmouseover="include_space('6')" onmouseout="exclude_space('6')" ><a href="capstone.html"><span class="space" id="space7">-</span>Capstone</a></li>
+		<li onmouseover="include_space('7')" onmouseout="exclude_space('7')" ><a href="contact.html"><span class="space" id="space8">-</span>Contact</a></li>
 	</ul>
 
 </div>
