--- a/skills.html
+++ b/skills.html
@@ -30,10 +30,10 @@
 	<div class="additional centext">[ Last Updated: 1/10/17 ]</div>
 	<div class="separation"></div>
 	<div class="centext">Programming Languages</div>
-	<div class="para centext">My programming language of choice is Java, it is what I've had the most experience with. I'm comfortable with HTML, CSS, and Javascript for web development purposes. I have also dabbled with Python and Lua, having a basic understanding of syntax.</div>
+	<div class="para centext">My programming language of choice is Java, it is what I've had the most experience with. I'm comfortable with HTML, CSS, and Javascript for web development purposes. I have also dabbled with Python and Lua, having an understanding of the syntax.</div>
 	<div class="separation2"></div>
 	<div class="centext">Software</div>
-	<div class="para centext">I use a variety of software in order when working on personal projects. For Image Editing I stick to Adobe Photoshop and have years of experience with it. For Video Editing my preference is to use Sony Vegas and Adobe After Effects. When it comes to Audio Editing, I rely on the use of Audacity. When programming I often will use an IDE or just a basic text editor like NotePad++ or SublimeText, for Java my favorite is IntelliJ by JetBrains. For Android Development I made use of Android Studio.</div>
+	<div class="para centext">I use a variety of software in order when working on personal projects. For Image Editing I stick to <a href="http://www.adobe.com/products/photoshop.html" target="none">Adobe Photoshop</a> and have years of experience with it. For Video Editing my preference is to use <a href="http://www.sonycreativesoftware.com/" target="none">Sony Vegas</a> and <a href="http://www.adobe.com/products/aftereffects.html" target="none">Adobe After Effects</a>. When it comes to Audio Editing, I rely on the use of Audacity. When programming I often will use an IDE or just a basic text editor like <a href="https://notepad-plus-plus.org/" target="none">NotePad++</a> or <a href="https://www.sublimetext.com/" target="none">SublimeText</a>. For Java my favorite IDE is <a href="https://www.jetbrains.com/idea/" target="none">IntelliJ by JetBrains</a>.</div>
 
 </div>
 
@@ -48,10 +48,9 @@
 		<li onmouseover="include_space('2')" onmouseout="exclude_space('2')" ><a href="about.html"><span class="space" id="space2">-</span>About</a></li>
 		<li onmouseover="include_space('3')" onmouseout="exclude_space('3')" ><a href="education.html"><span class="space" id="space3">-</span>Education</a></li>
 		<li onmouseover="include_space('4')" onmouseout="exclude_space('4')" ><a href="skills.html"><span class="space" id="space4">-</span>Skills</a></li>
-		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="projects.html"><span class="space" id="space5">-</span>Projects</a></li>
-		<li onmouseover="include_space('6')" onmouseout="exclude_space('6')" ><a href="hobbies.html"><span class="space" id="space6">-</span>Hobbies</a></li>
-		<li onmouseover="include_space('7')" onmouseout="exclude_space('7')" ><a href="capstone.html"><span class="space" id="space7">-</span>Capstone</a></li>
-		<li onmouseover="include_space('8')" onmouseout="exclude_space('8')" ><a href="contact.html"><span class="space" id="space8">-</span>Contact</a></li>
+		<li onmouseover="include_space('5')" onmouseout="exclude_space('5')" ><a href="hobbies.html"><span class="space" id="space6">-</span>Hobbies</a></li>
+		<li onmouseover="include_space('6')" onmouseout="exclude_space('6')" ><a href="capstone.html"><span class="space" id="space7">-</span>Capstone</a></li>
+		<li onmouseover="include_space('7')" onmouseout="exclude_space('7')" ><a href="contact.html"><span class="space" id="space8">-</span>Contact</a></li>
 	</ul>
 
 </div>
