--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<div class="centext">| - - - - - About - - - - - |</div>
+	<div class="headline centext">| - - - - - About - - - - - |</div>
 	<div class="additional centext">[ Last Updated: 1/10/17 ]</div>
 	<div class="separation"></div>
 	<div class="centext dark">
@@ -37,6 +37,7 @@
 	</div>
 	<div class="divider2">...</div>
 	<div class="para">???</div>
+	<div class="divider centext cD">work in progress</div>
 
 </div>
 
