--- a/hobbies.html
+++ b/hobbies.html
@@ -26,10 +26,11 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<div class="centext">| - - - - - Hobbies - - - - - |</div>
+	<div class="headline centext">| - - - - - Hobbies - - - - - |</div>
 	<div class="additional centext">[ Last Updated: 1/10/17 ]</div>
 	<div class="separation"></div>
 	<div class="para">In my spare time...</div>
+	<div class="divider centext cD">work in progress</div>
 
 <!-- Gallery
 	<div id="mygallery" class="stepcarousel">
