--- a/capstone.html
+++ b/capstone.html
@@ -26,27 +26,11 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<div class="centext">| - - - - - Capstone - - - - - |</div>
+	<div class="headline centext">| - - - - - Capstone - - - - - |</div>
 	<div class="additional centext">[ Last Updated: 1/10/17 ]</div>
 	<div class="separation"></div>
 	<div class="para centext">At Poly High School all seniors are required to complete a Senior Capstone Project. For my Senior Capstone Project...</div>
-	
-<!-- Gallery
-	<div id="mygallery" class="stepcarousel">
-		<div class="belt beltPost2" id="belt">
-        	<div class="panels">
-                <img class="panelimg" src="assets/tst1.png" />
-                <img class="panelimg" src="assets/tst2.png" />
-                <img class="panelimg" src="assets/tst3.png" />
-                <img class="panelimg" src="assets/tst4.png" />
-            </div>
-		</div>
-		<div class="beltbtns">
-		<p class="beltbtn beltbtnup" onclick="belt_moveup(getByID('belt'), 4)" ></p>
-		<p class="beltbtn beltbtndown" onclick="belt_movedown(getByID('belt'), 4)" ></p>
-		</div>
-	</div>
-End of Gallery-->
+	<div class="divider centext cD">work in progress</div>
 
 </div>
 
