--- a/education.html
+++ b/education.html
@@ -26,7 +26,7 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<div class="centext">| - - - - - Education - - - - - |</div>
+	<div class="headline centext">| - - - - - Education - - - - - |</div>
 	<div class="additional centext">[ Last Updated: 1/10/17 ]</div>
 	<div class="separation"></div>
 
