--- a/capstone.html
+++ b/capstone.html
@@ -27,10 +27,10 @@
 	<div class="divider">...<br>...</div>
 	
 	<div class="headline centext">| - - - - - Capstone - - - - - |</div>
-	<div class="additional centext">[ Last Updated: 1/10/17 ]</div>
+	<div class="additional centext">[ Last Updated: 1/17/17 ]</div>
 	<div class="separation"></div>
 	<div class="para centext">At Poly High School all seniors are required to complete a Senior Capstone Project. For my Senior Capstone Project...</div>
-	<div class="divider centext cD">work in progress</div>
+	<div class="divider centext cD"><a href="https://armandocampos.github.io/seniorcapstone/">Click Here</a></div>
 
 </div>
 
