--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-<title>Portfolio</title>
+<title>Resume</title>
 <style>
 @import url(index.css);
 @import url('https://fonts.googleapis.com/css?family=Merriweather');
@@ -29,28 +29,19 @@
 	
 	<div class="divider">...<br>...</div>
 	
-	<div class="headline centext">| - - - - - Portfolio - - - - - |</div>
-	<div class="additional centext">[ Last Updated: 1/10/17 ]</div>
+	<div class="headline centext">| - - - - - Resume - - - - - |</div>
+	<div class="additional centext">[ Last Updated: 1/19/17 ]</div>
 	<div class="separation"></div>
 	<div class="centext dark">
 	<div class="divider2 cD">...</div>
-	<div class="description">This is a personal portfolio for me, <a href="about.html">Armando Campos</a>.</div>
+	<div class="description">This resume contains a brief overview of my skills and experience.</div>
 	<div class="divider2 cD">...</div>
 	<div class="separation2"></div>
 	</div>
 	<div class="divider2">...</div>
 	<div class="dark centext">
 	<div class="divider2 cD">...</div>
-	<div class="additional cG">[ Table of Contents ]</div>
-	<ul id="toc" class="cYd">
-		<li><a href="about.html" class="cY">About</a></li>
-		<li><a href="resume.html" class="cY">Resume</a></li>
-		<li><a href="education.html" class="cY">Education</a></li>
-		<li><a href="skills.html" class="cY">Skills</a></li>
-		<li><a href="hobbies.html" class="cY">Hobbies</a></li>
-		<li><a href="capstone.html" class="cY">Capstone</a></li>
-		<li><a href="contact.html" class="cY">Contact</a></li>
-	</ul>
+	<iframe width="95%" height="800px" src="https://docs.google.com/document/d/15MgxcnGfdBJofb_yiV8jR5dVNZDVj2XzLYrLCVguIvk/pub?embedded=true"></iframe>
 	<div class="divider2 cD">...</div>
 	<div class="separation2"></div>
 	</div>
