--- a/skills.html
+++ b/skills.html
@@ -34,6 +34,10 @@
 	<div class="separation"></div>
 	<div class="centext">Programming Languages</div>
 	<div class="para centext">My programming language of choice is Java, it is what I've had the most experience with. I'm comfortable with HTML, CSS, and Javascript for web development purposes. I have also dabbled with Python and Lua, having an understanding of the syntax.</div>
+	<div class="dark">
+		<div>test</div>
+		<img class="phover" src="https://upload.wikimedia.org/wikipedia/en/thumb/3/30/Java_programming_language_logo.svg/549px-Java_programming_language_logo.svg.png" />
+	</div>
 	<div class="separation2"></div>
 	<div class="centext">Software</div>
 	<div class="para centext">I use a variety of software in order when working on personal projects. For Image Editing I stick to <a href="http://www.adobe.com/products/photoshop.html" target="none">Adobe Photoshop</a> and have years of experience with it. For Video Editing my preference is to use <a href="http://www.sonycreativesoftware.com/" target="none">Sony Vegas</a> and <a href="http://www.adobe.com/products/aftereffects.html" target="none">Adobe After Effects</a>. When it comes to Audio Editing, I rely on the use of Audacity. When programming I often will use an IDE or just a basic text editor like <a href="https://notepad-plus-plus.org/" target="none">NotePad++</a> or <a href="https://www.sublimetext.com/" target="none">SublimeText</a>. For Java my favorite IDE is <a href="https://www.jetbrains.com/idea/" target="none">IntelliJ by JetBrains</a>.</div>
